--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
             <img src="images/female/6667872_preview-removebg-preview.png" alt="">
         </div>
     </section>
+    <section class="middle-big flexible-containter">
+        <dir class="hlaf-weidth">
+            <img src="images/female/kisspng-eating-junk-food-hunger-fast-food-woman-eating-5b100f5d437345.6346499515277791652763-removebg-preview.png"
+                alt="">
+        </dir>
+        <div class="hlaf-weidth">
+            <h1>
+                Importent Notes
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus.
+            </p>
+            <a class="link-button" target="blank" href="https://www.facebook.com/foysalhossainomarfaruk/">Contact Me
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
