--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
             </a>
         </div>
     </section>
+    <div class="center">
+        <h2>
+            My Test
+        </h2>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+    </div>
 </body>
 
 </html>
