--- a/index.html
+++ b/index.html
@@ -52,6 +52,45 @@
             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </p>
     </div>
+    <section class="flexible-containter">
+        <dir class="box-one">
+            <img src="images/food/Project Cover7.png" alt="">
+            <h2>
+                Delicious
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit.
+            </p>
+
+        </dir>
+        <div class="box-one">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h2>
+                soup
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit.
+            </p>
+        </div>
+        <div class="box-one">
+            <img src="images/food/Project Cover8.png" alt="">
+            <h2>
+                vegetables
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit.
+        </div>
+    </section>
+    <div class="center">
+        <h3>
+            FOOD NETWORK
+        </h3>
+        <p>
+            Healthy Food, Healthy Life
+        </p>
+
+    </div>
+
 </body>
 
 </html>
