footer colur add

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
         </div>
     </section>
-    <div class="center">
+    <div class="finising">
         <h3>
-            FOOD NETWORK
+            Food Network
         </h3>
         <p>
             Healthy Food, Healthy Life
