--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
         </div>
     </section>
+    <div>
+
+    </div>
     <div class="finising">
         <h3>
             Food Network
