--- a/index.html
+++ b/index.html
@@ -81,9 +81,32 @@
                 Lorem ipsum dolor sit amet consectetur adipiscing elit.
         </div>
     </section>
-    <div>
-
-    </div>
+    <section class="box-two">
+        <div class="padding-add">
+            <h3>
+                Youtube Subscribers
+            </h3>
+            <h4>
+                1.1B
+            </h4>
+        </div>
+        <div class="padding-add">
+            <h3>
+                Instragram Followers
+            </h3>
+            <h4>
+                3M
+            </h4>
+        </div>
+        <div class="padding-add">
+            <h3>
+                Dribbble Shot Likes
+            </h3>
+            <h4>
+                1M
+            </h4>
+        </div>
+    </section>
     <div class="finising">
         <h3>
             Food Network
