--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
         </dir>
         <div class="hlaf-weidth">
             <h1>
-                Importent Notes
+                Importents Notes
             </h1>
             <p>
-                Lorem ipsum dolor sit amet,consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
-                feugiat cursus.
+                A food is something that provides nutrients. Nutrients are substances that provide: energy for activity,
+                growth, and all functions of the body such as breathing, digesting food, and keeping warm; materials for
+                the growth and repair of the body, and for keeping the immune system healthy.
             </p>
             <a class="link-button" target="blank" href="https://www.facebook.com/foysalhossainomarfaruk/">Contact Me
             </a>
@@ -46,10 +47,11 @@
     </section>
     <div class="center">
         <h2>
-            My Test
+            My Food Test
         </h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            A method by which certain components of a food mixture can be detected. An example is FEHLING'S TEST for
+            reducing sugars.
         </p>
     </div>
     <section class="flexible-containter">
@@ -59,26 +61,27 @@
                 Delicious
             </h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit.
+                Delicious meals are tasty and charming. You
+                wouldn't call delicious that what is tasteless or unpleasant.
             </p>
 
         </dir>
         <div class="box-one">
             <img src="images/food/Project Cover.jpg" alt="">
             <h2>
-                soup
+                Soup
             </h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit.
+                a substance or mixture regarded as resembling soup in appearance or consistency
             </p>
         </div>
         <div class="box-one">
             <img src="images/food/Project Cover8.png" alt="">
             <h2>
-                vegetables
+                Vegetables
             </h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit.
+                a plant or part of a plant used as food, such as a cabbage, potato, turnip, or bean.
         </div>
     </section>
     <section class="box-two">
